# interview-coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  SRS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup.sh
.streamlit/: secrets.toml
backend/: main.py
backend/core/: database.py
backend/models/: user.py
frontend/: app.py
ml/: __init__.py
ml/auth/: user_manager.py
ml/avatar/: avatar_manager.py
ml/interview/: __init__.py  answer_evaluator.py  interview_manager.py
ml/mcq/: __init__.py  mcq_manager.py  mcq_vector_store.py
ml/rag/: __init__.py  vector_store.py
ml/report/: report_generator.py
ml/resume_parser/: __init__.py  resume_processor.py
ml/voice/: voice_processor.py
scripts/: setup_local.sh
tests/: conftest.py  test_interview.py  test_mcq.py  test_resume_parser.py
